--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="theme-color" content="#0a0a23">
 
-    <!-- <link rel="icon" href="https://www.freecodecamp.org/favicon-32x32.png?v=6cba562cbd10e31af925a976f3db73f7" type="image/png"> -->
-    <link rel="icon" href="/Images/favicon.png" type="image/png">
+    <link rel="icon" href="https://www.freecodecamp.org/favicon-32x32.png?v=6cba562cbd10e31af925a976f3db73f7" type="image/png">
+    <!-- <link rel="icon" href="/Images/favicon.png" type="image/png"> -->
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,300,0,0" />
